apps/nextjs/tundera-nextjs-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tundera-nextjs-web-deployment
  labels:
    app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
    meanpug.com/app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
  template:
    metadata:
      labels:
        app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
    spec:
      # volumes:
      #   - name: sites-enabled
      #     configMap:
      #       name: tundera-nextjs-web-nginx-sites-configmap
      containers:
      # - name: nginx
      #   image: nginx:1.14.2
      #   volumeMounts:
      #     - name: sites-enabled
      #       mountPath: /etc/nginx/conf.d/
      #   ports:
      #     - containerPort: 80
      #   livenessProbe:
      #     httpGet:
      #       path: /
      #       port: 80
      #     initialDelaySeconds: 5
      #     periodSeconds: 5
      - name: tundera-nextjs
        image: us.gcr.io/tundera-276902/tundera-nextjs:latest # {"$ref":"#/definitions/io.k8s.cli.substitutions.image-tag"}
        command: ['node', 'src/index.js']
        ports:
        - containerPort: 3000
          name: app
